--- a/fastforge/templates/new_project/pyproject.toml.jinja2
+++ b/fastforge/templates/new_project/pyproject.toml.jinja2
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.10"
 fastapi = "^0.104.0"
 uvicorn = {extras = ["standard"], version = "^0.24.0"}
+sqlalchemy = "^2.0.0"
+pydantic = "^2.0.0"
+pydantic-settings = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
