--- a/fastcraft/templates/new_project/pyproject.toml.jinja2
+++ b/fastcraft/templates/new_project/pyproject.toml.jinja2
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "{{ project_name }}"
 version = "0.1.0"
-description = "A FastAPI project generated with FastForge"
+description = "A FastAPI project generated with FastCraft"
 authors = ["Your Name <your.email@example.com>"]
 readme = "README.md"
 
