--- a/fastcraft/templates/new_project/config/database.py.jinja2
+++ b/fastcraft/templates/new_project/config/database.py.jinja2
@@ -35,3 +35,8 @@ def get_db():
 def create_tables():
     """Create all database tables."""
     Base.metadata.create_all(bind=engine)
+
+
+def get_database_url() -> str:
+    """Get the current database URL."""
+    return settings.database_url
