--- a/fastcraft/templates/new_project/config/settings.py.jinja2
+++ b/fastcraft/templates/new_project/config/settings.py.jinja2
@@ -3,7 +3,7 @@
 from functools import lru_cache
 from typing import Optional
 
-from pydantic import BaseSettings
+from pydantic_settings import BaseSettings
 
 
 class Settings(BaseSettings):
@@ -30,6 +30,7 @@ class Settings(BaseSettings):
     class Config:
         env_file = ".env"
         case_sensitive = True
+        env_prefix = ""  # No prefix for environment variables
 
 
 @lru_cache()
