--- a/fascraft/templates/new_project/env.sample.jinja2
+++ b/fascraft/templates/new_project/env.sample.jinja2
@@ -70,4 +70,4 @@ LOG_FORMAT=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 API_V1_PREFIX=/api/v1
 PROJECT_NAME={{ project_name }}
 PROJECT_VERSION=0.1.0
-PROJECT_DESCRIPTION="A FastAPI project generated with FastCraft"
+PROJECT_DESCRIPTION="A FastAPI project generated with FasCraft"
