--- a/fascraft/templates/new_project/pyproject.toml.jinja2
+++ b/fascraft/templates/new_project/pyproject.toml.jinja2
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "{{ project_name }}"
 version = "0.1.0"
-description = "A FastAPI project generated with FastCraft"
+description = "A FastAPI project generated with FasCraft"
 authors = ["Your Name <your.email@example.com>"]
 readme = "README.md"
 
