--- a/fascraft/templates/new_project/routers/__init__.py.jinja2
+++ b/fascraft/templates/new_project/routers/__init__.py.jinja2
@@ -1,9 +1,5 @@
-"""Router modules for {{ project_name }}."""
+"""Routers package for {{ project_name }}."""
 
-# Import routers here as they are generated
-# from . import users, items
+from .base import base_router
 
-__all__ = [
-    # "users",
-    # "items",
-]
+__all__ = ["base_router"]
